--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <meta charset="UTF-8">
 <html>
     <head>
+        <title>Glow-Gen-Tool</title>
         <link href="style.css" rel="stylesheet" />
         
     </head>
