--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <title>Glow-Gen-Tool</title>
         <link href="style.css" rel="stylesheet" />
-        
+        <link href="20211219_031528.png" rel="icon" />
     </head>
     <body>
         <div class="grid-cont">
