--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <textarea id="sum"> </textarea>
                     
                         <a href="https://github.com/BoszGTec/Glow-Gen-Tool"><img src="GitHub-Mark-Light-32px.png"  /></a>
-                        <a href="mailto:bossgeeg123456@gmail.com"><h5>@bossgeeg</h5></a>
+                        <a href="mailto:bossgeeg123456@gmail.com"><h5>@bossgeeg123456</h5></a>
                     
                 </form>
            </div>
