--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <title>Glow-Gen-Tool</title>
+        <meta name="viewport" content="width=device-width, initial-scale=0.6">
         <link href="style.css" rel="stylesheet" />
         <link href="20211219_031528.png" rel="icon" />
     </head>
